sumo/tests/od2trips/errors/format/o/o_factor_false/input_od_o.fma
$OR;D2
* From-Time  To-Time
0.00 1.00
* Factor
a
*
* some
* additional
* comments
         1          2          100

